--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,19 +1,69 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 :root{
+    /*selector universal*/
     --Color-principal:#ba5624;
     --color-secundario: #ffa552;
     --color-fondos:#fcde9c;
     --color-alterno:#38726c;
     --font-color:#070707;
+
+
 }
 *{
     /*variables de entorno*/
     margin:0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "poppins", sans-serif;
 }
 header{
     background-color: var(--Color-principal);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5 10;
+    
 }
+
+nav{
+    display:  flex;
+    gap: 50px;
+}
+nav a{
+    color: var(--font-color);
+    text-decoration:none;
+    
+}
+#estreno h2{
+    margin-left: 10vh;
+}
+#estreno .img-portada-estrenos{
+    display: flex;
+    flex-wrap: wrap;
+}
+#estreno{
+    border: 2px solid;
+    display: block;
+    
+    
+    background-color: linear-gradient(to bottom var(--Color-principal),var(--color-secundario), var(--color-fondos));
+}
+.img-portada-estrenos{
+    margin: 25 25;
+    align-items: center;
+    
+}
+
+.img-portada-estrenos .img-portadas{
+    width: 50%;
+    height: 25vh;
+    
+    
+    
+}
+
+
 footer{
 
 }
